# csc485c-self-study

./: .gitignore  pyproject.toml
pyquiz/: main.py
